--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.mvc.view.suffix=.jsp
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/BancoEbury
 spring.datasource.username=user
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
